--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -39,83 +39,83 @@
 <body class="main-body">
 <ul class="am-list am-list-static am-list-border main-list main-margin" id="main-list">
     <!--<li>-->
-        <!--<div class="main-container">-->
-            <!--<div class="am-g main-g">-->
-                <!--<div class="am-u-sm-4 main-left">-->
-                    <!--<div class="main-center ">-->
-                        <!--<img src="assets/i/avatar-offical.jpg" class="am-radius main-radius"/>-->
+    <!--<div class="main-container">-->
+    <!--<div class="am-g main-g">-->
+    <!--<div class="am-u-sm-4 main-left">-->
+    <!--<div class="main-center ">-->
+    <!--<img src="assets/i/avatar-offical.jpg" class="am-radius main-radius"/>-->
 
-                        <!--<div class="main-gray">-->
-                            <!--<div class="main-name">Emily Blaning<span>20岁</span>-->
+    <!--<div class="main-gray">-->
+    <!--<div class="main-name">Emily Blaning<span>20岁</span>-->
 
-                                <!--<p class="am-icon-venus main-boy"></p></div>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="am-u-sm-8 main-right">-->
-                    <!--<div class="main-location">地点：大宁灵石公园偏门大宁</div>-->
-                    <!--<div class="main-time">3分钟前 发布</div>-->
-                    <!--<div class="main-people"><img src="assets/i/people.png" class="main-icon-people"><span>单独约</span>-->
-                    <!--</div>-->
-                    <!--<div><span class="main-item">约跑</span> <span class="main-start-time">17:00-19:00</span></div>-->
-                    <!--<div>-->
-                        <!--<img src="assets/i/sports/run.png" class="main-sports"/>-->
-                        <!--<img src="assets/i/sports/yoga.png" class="main-sports"/>-->
-                        <!--<img src="assets/i/sports/swiming.png" class="main-sports"/>-->
-                        <!--<img src="assets/i/sports/badminton.png" class="main-sports"/>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-        <!--<div class="main-container main-text-bottom">-->
-            <!--<div class="am-g main-g">-->
-                <!--<div class="am-u-sm-9 main-9">一起来夜跑跑跑练瑜伽锻炼</div>-->
-                <!--<div class="am-u-sm-3 main-3">-->
-                    <!--<div class="main-button">-->
-                        <!--<button type="button" class="am-btn am-btn-success am-round am-btn-xs main-green">一起燥</button>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
+    <!--<p class="am-icon-venus main-boy"></p></div>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--<div class="am-u-sm-8 main-right">-->
+    <!--<div class="main-location">地点：大宁灵石公园偏门大宁</div>-->
+    <!--<div class="main-time">3分钟前 发布</div>-->
+    <!--<div class="main-people"><img src="assets/i/people.png" class="main-icon-people"><span>单独约</span>-->
+    <!--</div>-->
+    <!--<div><span class="main-item">约跑</span> <span class="main-start-time">17:00-19:00</span></div>-->
+    <!--<div>-->
+    <!--<img src="assets/i/sports/run.png" class="main-sports"/>-->
+    <!--<img src="assets/i/sports/yoga.png" class="main-sports"/>-->
+    <!--<img src="assets/i/sports/swiming.png" class="main-sports"/>-->
+    <!--<img src="assets/i/sports/badminton.png" class="main-sports"/>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--<div class="main-container main-text-bottom">-->
+    <!--<div class="am-g main-g">-->
+    <!--<div class="am-u-sm-9 main-9">一起来夜跑跑跑练瑜伽锻炼</div>-->
+    <!--<div class="am-u-sm-3 main-3">-->
+    <!--<div class="main-button">-->
+    <!--<button type="button" class="am-btn am-btn-success am-round am-btn-xs main-green">一起燥</button>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
     <!--</li>-->
-<!--</ul>-->
-<!--<ul class="am-list am-list-static am-list-border main-list main-margin">-->
+    <!--</ul>-->
+    <!--<ul class="am-list am-list-static am-list-border main-list main-margin">-->
     <!--<li>-->
-        <!--<div class="main-container">-->
-            <!--<div class="am-g main-g">-->
-                <!--<div class="am-u-sm-4 main-left">-->
-                    <!--<div class="main-center">-->
-                        <!--<img src="assets/i/avatar-offical.jpg" class="am-radius main-radius"/>-->
+    <!--<div class="main-container">-->
+    <!--<div class="am-g main-g">-->
+    <!--<div class="am-u-sm-4 main-left">-->
+    <!--<div class="main-center">-->
+    <!--<img src="assets/i/avatar-offical.jpg" class="am-radius main-radius"/>-->
 
-                        <!--<div class="main-gray">-->
-                            <!--<div class="main-name">躁动官方 Offical<p class=""></p></div>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="am-u-sm-8 main-right">-->
-                    <!--<div class="main-location">地点：大宁灵石公园偏门大宁</div>-->
-                    <!--<div class="main-time">3分钟前 发布<img src="assets/i/zaodong.jpg" class="main-logo"/></div>-->
-                    <!--<div class="main-people"><img src="assets/i/people.png" class="main-icon-people">11人｜15人</div>-->
-                    <!--<div><span class="main-item">约跑</span> <span class="main-start-time">17:00-19:00</span></div>-->
-                    <!--<div>-->
-                        <!--<img src="assets/i/sports/run.png" class="main-sports"/>-->
-                        <!--<img src="assets/i/sports/yoga.png" class="main-sports"/>-->
-                        <!--<img src="assets/i/sports/swiming.png" class="main-sports"/>-->
-                        <!--<img src="assets/i/sports/badminton.png" class="main-sports"/>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-        <!--<div class="main-container main-text-bottom">-->
-            <!--<div class="am-g main-g">-->
-                <!--<div class="am-u-sm-9 main-9">一起来夜跑跑跑练瑜伽锻炼</div>-->
-                <!--<div class="am-u-sm-3 main-3">-->
-                    <!--<div class="main-button">-->
-                        <!--<button type="button" class="am-btn am-btn-success am-round am-btn-xs main-danger">来晚了</button>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
+    <!--<div class="main-gray">-->
+    <!--<div class="main-name">躁动官方 Offical<p class=""></p></div>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--<div class="am-u-sm-8 main-right">-->
+    <!--<div class="main-location">地点：大宁灵石公园偏门大宁</div>-->
+    <!--<div class="main-time">3分钟前 发布<img src="assets/i/zaodong.jpg" class="main-logo"/></div>-->
+    <!--<div class="main-people"><img src="assets/i/people.png" class="main-icon-people">11人｜15人</div>-->
+    <!--<div><span class="main-item">约跑</span> <span class="main-start-time">17:00-19:00</span></div>-->
+    <!--<div>-->
+    <!--<img src="assets/i/sports/run.png" class="main-sports"/>-->
+    <!--<img src="assets/i/sports/yoga.png" class="main-sports"/>-->
+    <!--<img src="assets/i/sports/swiming.png" class="main-sports"/>-->
+    <!--<img src="assets/i/sports/badminton.png" class="main-sports"/>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--<div class="main-container main-text-bottom">-->
+    <!--<div class="am-g main-g">-->
+    <!--<div class="am-u-sm-9 main-9">一起来夜跑跑跑练瑜伽锻炼</div>-->
+    <!--<div class="am-u-sm-3 main-3">-->
+    <!--<div class="main-button">-->
+    <!--<button type="button" class="am-btn am-btn-success am-round am-btn-xs main-danger">来晚了</button>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
     <!--</li>-->
 </ul>
 <div class="main-side-bar">
@@ -142,7 +142,8 @@
                 <div class="am-g main-g">
                     <div class="am-u-sm-4 main-left">
                         <div class="main-center">
-                            <a href="timeLine.html?userId={{userId}}"><img src="{{avatarUrl}}" class="am-radius main-radius"/></a>
+                            <a href="timeLine.html?userId={{userId}}"><img src="{{avatarUrl}}"
+                                                                           class="am-radius main-radius"/></a>
 
                             <div class="main-gray">
                                 <div class="main-name">{{nickName}}
@@ -155,8 +156,10 @@
                     <div class="am-u-sm-8 main-right">
                         <div class="main-location">地点：{{location}}</div>
                         <div class="main-time">{{diffTime}} 发布</div>
-                        <div class="main-people"><img src="assets/i/people.png" class="main-icon-people"><span>单独约</span></div>
-                        <div><span class="main-item">{{sportName}}</span> <span class="main-start-time">{{startTime}}-{{endTime}}</span></div>
+                        <div class="main-people"><img src="assets/i/people.png"
+                                                      class="main-icon-people"><span>单独约</span></div>
+                        <div><span class="main-item">{{sportName}}</span> <span class="main-start-time">{{startTime}}-{{endTime}}</span>
+                        </div>
                         <div>
                             <img src="assets/i/sports/run.png" class="main-sports"/>
                             <img src="assets/i/sports/yoga.png" class="main-sports"/>
@@ -171,7 +174,10 @@
                     <div class="am-u-sm-9 main-9">{{content}}</div>
                     <div class="am-u-sm-3 main-3">
                         <div class="main-button">
-                            <button type="button" class="am-btn am-btn-success am-round am-btn-xs main-green" id="main-confirm">一起躁</button>
+                            <input type="hidden" value="{{orderId}}" id="orderId">
+                            <button onclick="generateOrderCustomer()" type="button"
+                                    class="am-btn am-btn-success am-round am-btn-xs main-green" id="main-confirm">一起躁
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -179,6 +185,16 @@
         </li>
     </ul>
     {{/each}}
+    <div class="am-modal am-modal-alert" tabindex="-1" id="my-alert">
+        <div class="am-modal-dialog">
+            <div class="am-modal-bd" id="status">
+                加入成功！
+            </div>
+            <div class="am-modal-footer">
+                <span class="am-modal-btn">确定</span>
+            </div>
+        </div>
+    </div>
 </script>
 
 </body>
