--- a/src/main/webapp/timeLine.html
+++ b/src/main/webapp/timeLine.html
@@ -74,7 +74,7 @@
             <div class="tl-user">
                 <span>{{nickName}}</span>
 
-                <p class="am-icon-mars"></p>
+                <!--<p class="am-icon-mars"></p>-->
 
                 <div class="tl-age">
                     <span>{{age}}</span>
