--- a/src/main/webapp/datingRequest.html
+++ b/src/main/webapp/datingRequest.html
@@ -68,10 +68,10 @@
                         <input value="{{customerId}}" type="hidden" id="customerId">
 
                         <div class="am-u-sm-6">
-                            <button class="am-btn am-btn-success am-round am-btn-xs">残忍拒绝</button>
+                            <button onclick="responseCustomer(0)" type="button" class="am-btn am-btn-success am-round am-btn-xs">残忍拒绝</button>
                         </div>
                         <div class="am-u-sm-6">
-                            <button onclick="responseCustomer()" class="am-btn am-btn-danger am-round am-btn-xs">同意约炼
+                            <button onclick="responseCustomer(1)" type="button" class="am-btn am-btn-danger am-round am-btn-xs">同意约炼
                             </button>
                         </div>
                     </div>
@@ -83,7 +83,7 @@
     <div class="am-modal am-modal-alert" tabindex="-1" id="my-alert">
         <div class="am-modal-dialog">
             <div class="am-modal-bd" id="status">
-                请求成功！
+                拒绝成功！
             </div>
             <div class="am-modal-footer">
                 <span class="am-modal-btn">确定</span>
