--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -148,16 +148,38 @@
                             <div class="main-gray">
                                 <div class="main-name">{{nickName}}
                                     <span>20岁</span>
-
-                                    <p class="am-icon-mars main-boy"></p></div>
+                                    {{#if official}}
+                                    {{else}}
+                                    {{#compare sex}}
+                                    <p class="am-icon-smile-o main-boy"></p>
+                                    {{else}}
+                                    {{#judge sex}}
+                                    <p class="am-icon-mars main-boy"></p>
+                                    {{else}}
+                                    <p class="am-icon-mars main-girl"></p>
+                                    {{/judge}}
+                                    {{/compare}}
+                                    {{/if}}
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="am-u-sm-8 main-right">
                         <div class="main-location">地点：{{location}}</div>
-                        <div class="main-time">{{diffTime}} 发布</div>
-                        <div class="main-people"><img src="assets/i/people.png"
-                                                      class="main-icon-people"><span>单独约</span></div>
+                        <div class="main-time">{{diffTime}} 前发布
+                            {{#if official}}
+                            <img src="assets/i/zaodong.jpg" class="main-logo"/>
+                            {{/if}}
+                        </div>
+                        <div class="main-people">
+                            <img src="assets/i/people.png"
+                                 class="main-icon-people">
+                            {{#if official}}
+                            <span>{{currentPeople}}人|{{peopleCount}}人</span>
+                            {{else}}
+                            <span>单独约</span>
+                            {{/if}}
+                        </div>
                         <div><span class="main-item">{{sportName}}</span> <span class="main-start-time">{{startTime}}-{{endTime}}</span>
                         </div>
                         <div>
@@ -175,9 +197,13 @@
                     <div class="am-u-sm-3 main-3">
                         <div class="main-button">
                             <input type="hidden" value="{{orderId}}" id="orderId">
+                            {{#if enabled}}
                             <button onclick="generateOrderCustomer()" type="button"
                                     class="am-btn am-btn-success am-round am-btn-xs main-green" id="main-confirm">一起躁
                             </button>
+                            {{else}}
+                            <button type="button" class="am-btn am-btn-success am-round am-btn-xs main-danger">来晚了</button>
+                            {{/if}}
                         </div>
                     </div>
                 </div>
