--- a/src/main/webapp/addDatings.html
+++ b/src/main/webapp/addDatings.html
@@ -182,8 +182,17 @@
 <div class="am-modal am-modal-prompt" tabindex="-1" id="ad-partner">
     <div class="am-modal-dialog">
         <div class="am-modal-bd">
-            请输入运动对象
-            <input type="text" class="am-modal-prompt-input">
+            请选择运动对象
+            <!--<input type="text" class="am-modal-prompt-input">-->
+            <label class="am-radio-inline">
+                <input type="radio" value="1" name="gender">男
+            </label>
+            <label class="am-radio-inline">
+                <input type="radio" value="2" name="gender">女
+            </label>
+            <label class="am-radio-inline">
+                <input type="radio" value="0" name="gender">不限
+            </label>
         </div>
         <div class="am-modal-footer">
             <span class="am-modal-btn" data-am-modal-cancel>取消</span>
@@ -194,8 +203,17 @@
 <div class="am-modal am-modal-prompt" tabindex="-1" id="ad-age">
     <div class="am-modal-dialog">
         <div class="am-modal-bd">
-            请输入对方年龄
-            <input type="text" class="am-modal-prompt-input">
+            请选择对方年龄范围
+            <!--<input type="text" class="am-modal-prompt-input">-->
+            <label class="am-radio-inline">
+                <input type="radio" value="0" name="age">18－24岁
+            </label>
+            <label class="am-radio-inline">
+                <input type="radio" value="1" name="age">25－30岁
+            </label>
+            <label class="am-radio-inline">
+                <input type="radio" value="2" name="age">不限
+            </label>
         </div>
         <div class="am-modal-footer">
             <span class="am-modal-btn" data-am-modal-cancel>取消</span>
