--- a/src/main/webapp/datingRequest.html
+++ b/src/main/webapp/datingRequest.html
@@ -65,13 +65,12 @@
                     <div class="dr-name">{{nickName}}</div>
                     <div class="dr-info"><span>{{age}}岁</span> {{city}} <span class="am-icon-mars dr-boy"></span></div>
                     <div class="am-g dr-conform-button">
-                        <input value="{{customerId}}" type="hidden" id="customerId">
-
+                        <!--<input value="{{customerId}}" type="hidden" id="customerId">-->
                         <div class="am-u-sm-6">
-                            <button onclick="responseCustomer(0)" type="button" class="am-btn am-btn-success am-round am-btn-xs">残忍拒绝</button>
+                            <button onclick="responseCustomer(0,'{{orderCId}}')" type="button" class="am-btn am-btn-success am-round am-btn-xs">残忍拒绝</button>
                         </div>
                         <div class="am-u-sm-6">
-                            <button onclick="responseCustomer(1)" type="button" class="am-btn am-btn-danger am-round am-btn-xs">同意约炼
+                            <button onclick="responseCustomer(1,'{{orderCId}}')" type="button" class="am-btn am-btn-danger am-round am-btn-xs">同意约炼
                             </button>
                         </div>
                     </div>
