--- a/src/main/webapp/addDatings.html
+++ b/src/main/webapp/addDatings.html
@@ -119,6 +119,7 @@
         <ul class="am-list am-list-static am-list-border">
             <li>
                 <textarea class="ad-context" placeholder="空乏的说明是没有人会报名的" id="context-text"></textarea>
+                <span class="ad-limit">仅限12个字</span>
             </li>
         </ul>
     </div>
@@ -182,16 +183,16 @@
 <div class="am-modal am-modal-prompt" tabindex="-1" id="ad-partner">
     <div class="am-modal-dialog">
         <div class="am-modal-bd">
-            请选择运动对象
+            请选择运动对象<br/>
             <!--<input type="text" class="am-modal-prompt-input">-->
             <label class="am-radio-inline">
-                <input type="radio" value="1" name="gender">男
+                <input type="radio" value="男" name="partner">男
             </label>
             <label class="am-radio-inline">
-                <input type="radio" value="2" name="gender">女
+                <input type="radio" value="女" name="partner">女
             </label>
             <label class="am-radio-inline">
-                <input type="radio" value="0" name="gender">不限
+                <input type="radio" value="不限" name="partner">不限
             </label>
         </div>
         <div class="am-modal-footer">
@@ -203,16 +204,18 @@
 <div class="am-modal am-modal-prompt" tabindex="-1" id="ad-age">
     <div class="am-modal-dialog">
         <div class="am-modal-bd">
-            请选择对方年龄范围
+            请选择对方年龄范围<br/>
             <!--<input type="text" class="am-modal-prompt-input">-->
             <label class="am-radio-inline">
-                <input type="radio" value="0" name="age">18－24岁
+                <input type="radio" value="18－24岁" name="age">18-24岁
             </label>
+            <br/>
             <label class="am-radio-inline">
-                <input type="radio" value="1" name="age">25－30岁
+                <input type="radio" value="25－30岁" name="age">25-30岁
             </label>
+            <br/>
             <label class="am-radio-inline">
-                <input type="radio" value="2" name="age">不限
+                <input type="radio" value="不限" name="age">不&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;限&nbsp;&nbsp;
             </label>
         </div>
         <div class="am-modal-footer">
