--- a/src/main/webapp/addDatings.html
+++ b/src/main/webapp/addDatings.html
@@ -118,7 +118,7 @@
     <div class="ad-info">
         <ul class="am-list am-list-static am-list-border">
             <li>
-                <textarea class="ad-context" placeholder="空乏的说明是没有人会报名的" id="context-text"></textarea>
+                <textarea class="ad-content" placeholder="空乏的说明是没有人会报名的" id="content-text"></textarea>
                 <span class="ad-limit">仅限12个字</span>
             </li>
         </ul>
