全局点击修改

--- a/src/main/webapp/addDatings.html
+++ b/src/main/webapp/addDatings.html
@@ -80,23 +80,27 @@
     <div class="ad-info">
         <ul class="am-list am-list-static am-list-border">
             <li>
-                <span class="am-badge ad-badge"><a class="am-icon-chevron-right" id="title-btn"></a></span>
+                <!--<a class="ii-href" id="title-btn"></a>-->
                 <span class="am-badge ad-badge" id="title-text">跑步</span>
+                <i class="am-icon-chevron-right"></i>
                 主题
             </li>
             <li>
-                <span class="am-badge ad-badge"><a class="am-icon-chevron-right" id="location-btn"></a></span>
+                <a class="ii-href" id="location-btn"></a>
                 <span class="am-badge ad-badge" id="location-text"></span>
+                <i class="am-icon-chevron-right"></i>
                 地点
             </li>
             <li>
-                <span class="am-badge ad-badge"><a class="am-icon-chevron-right" id="startTime-btn"></a></span>
+                <a class="ii-href" id="startTime-btn"></a>
                 <span class="am-badge ad-badge" id="startTime-text"></span>
+                <i class="am-icon-chevron-right"></i>
                 开始时间
             </li>
             <li>
-                <span class="am-badge ad-badge"><a class="am-icon-chevron-right" id="endTime-btn"></a></span>
+                <a class="ii-href" id="endTime-btn"></a>
                 <span class="am-badge ad-badge" id="endTime-text"></span>
+                <i class="am-icon-chevron-right"></i>
                 结束时间
             </li>
         </ul>
@@ -104,13 +108,15 @@
     <div class="ad-info">
         <ul class="am-list am-list-static am-list-border">
             <li>
-                <span class="am-badge ad-badge"><a class="am-icon-chevron-right" id="partner-btn"></a></span>
+                <a class="ii-href" id="partner-btn"></a>
                 <span class="am-badge ad-badge am-badge-danger" id="partner-text"></span>
+                <i class="am-icon-chevron-right"></i>
                 对象
             </li>
             <li>
-                <span class="am-badge ad-badge"><a class="am-icon-chevron-right" id="age-btn"></a></span>
+                <a class="ii-href" id="age-btn"></a>
                 <span class="am-badge ad-badge am-badge-danger" id="age-text"></span>
+                <i class="am-icon-chevron-right"></i>
                 年龄
             </li>
         </ul>
