--- a/src/main/webapp/individualInfo.html
+++ b/src/main/webapp/individualInfo.html
@@ -63,29 +63,30 @@
                     <div class="ii-title">头像</div>
                 </div>
             </li>
-
             <li>
                 <span class="am-badge ii-badge">{{nickName}}</span>
                 昵称
             </li>
             <li>
-                <span class="am-badge ii-badge"><a class="am-icon-chevron-right" id="tel-btn"></a></span>
+                <a class="ii-href" id="tel-btn"></a>
                 <span class="am-badge ii-badge am-badge-danger" id="text-tel">{{tel}}</span>
+                <i class="am-icon-chevron-right"></i>
                 手机号
             </li>
             <li>
-                <span class="am-badge ii-badge"><a class="am-icon-chevron-right" id="weChat-btn"></a></span>
+                <a class="ii-href" id="weChat-btn"></a>
                 <span class="am-badge ii-badge am-badge-danger" id="text-weChat">{{weChat}}</span>
+                <i class="am-icon-chevron-right"></i>
                 微信号
             </li>
             <li>
                 <a class="ii-href" href="timeLine.html?userId={{id}}"></a>
-                <span class="am-badge ii-badge"><i class="am-icon-chevron-right"></i></span>
+                <i class="am-icon-chevron-right"></i>
                 时光轴
             </li>
             <li>
                 <a class="ii-href" href="datingRequest.html?userId={{id}}"></a>
-                <span class="am-badge ii-badge"><i class="am-icon-chevron-right" href="datingRequest.html"></i></span>
+                <i class="am-icon-chevron-right"></i>
                 我的约伴
             </li>
         </ul>
@@ -93,27 +94,31 @@
     <div class="ii-info">
         <ul class="am-list am-list-static am-list-border">
             <li>
-                <span class="am-badge ii-badge"><a class="am-icon-chevron-right" id="gender-btn"></a></span>
+                <a class="ii-href" id="gender-btn"></a>
                 <span class="am-badge ii-badge am-badge-danger" id="text-gender"></span>
+                <i class="am-icon-chevron-right"></i>
                 性别
             </li>
             <li>
-                <span class="am-badge ii-badge"><a class="am-icon-chevron-right" id="age-btn"></a></span>
+                <a class="ii-href" id="age-btn"></a>
                 <span class="am-badge ii-badge am-badge-danger" id="text-age">{{age}}岁</span>
+                <i class="am-icon-chevron-right"></i>
                 年龄
             </li>
             <li>
-                <span class="am-badge ii-badge"><a class="am-icon-chevron-right" id="height-btn"></a></span>
+                <a class="ii-href" id="height-btn"></a>
                 <span class="am-badge ii-badge am-badge-danger" id="text-height">{{height}}cm</span>
+                <i class="am-icon-chevron-right"></i>
                 身高
             </li>
             <li>
-                <span class="am-badge ii-badge"><a class="am-icon-chevron-right" id="weight-btn"></a></span>
+                <a class="ii-href" id="weight-btn"></a>
                 <span class="am-badge ii-badge am-badge-danger" id="text-weight">{{weight}}kg</span>
+                <i class="am-icon-chevron-right"></i>
                 体重
             </li>
             <li style="height: 56px">
-                <span class="am-badge ii-badge"><img src="assets/i/add.png" class="ii-sports" id="sports-btn"/></span>
+                <!--<a class="ii-href" id="sports-btn"></a>-->
                 <span class="am-badge ii-badge"><img src="assets/i/sports/run.png" class="ii-sports"/></span>
                 <span class="am-badge ii-badge"><img src="assets/i/sports/swiming.png" class="ii-sports"/></span>
                 <span class="am-badge ii-badge"><img src="assets/i/sports/yoga.png" class="ii-sports"/></span>
