--- a/src/main/webapp/addDatings.html
+++ b/src/main/webapp/addDatings.html
@@ -73,6 +73,7 @@
     <meta name="msapplication-TileColor" content="#0e90d2">
 
     <link rel="stylesheet" href="assets/css/amazeui.min.css">
+    <link rel="stylesheet" href="assets/css/spinningwheel.css"/>
     <link rel="stylesheet" href="assets/css/app.css">
 </head>
 <body class="ad-body">
@@ -241,6 +242,16 @@
         </div>
     </div>
 </div>
+<div class="am-modal am-modal-alert" tabindex="-1" id="success-alert">
+    <div class="am-modal-dialog">
+        <div class="am-modal-bd">
+            发布成功！
+        </div>
+        <div class="am-modal-footer">
+            <span class="am-modal-btn" onclick="toMain();">确定</span>
+        </div>
+    </div>
+</div>
 
 <!--[if (gte IE 9)|!(IE)]><!-->
 <script src="assets/js/jquery.min.js"></script>
@@ -264,6 +275,7 @@
 <script src="assets/js/amazeui.ie8polyfill.min.js"></script>
 <![endif]-->
 <script src="assets/js/amazeui.min.js"></script>
+<script src="assets/js/spinningwheel.js"></script>
 <script src="assets/js/common.js"></script>
 <script src="assets/js/addDating.js"></script>
 </body>
