--- a/src/main/webapp/addDatings.html
+++ b/src/main/webapp/addDatings.html
@@ -152,7 +152,7 @@
 <div class="am-modal am-modal-prompt" tabindex="-1" id="ad-location">
     <div class="am-modal-dialog">
         <div class="am-modal-bd">
-            请输入运动地点
+            运动地点（仅限10个字符）
             <input type="text" class="am-modal-prompt-input">
         </div>
         <div class="am-modal-footer">
@@ -161,32 +161,6 @@
         </div>
     </div>
 </div>
-
-<div class="am-modal am-modal-prompt" tabindex="-1" id="ad-startTime">
-    <div class="am-modal-dialog">
-        <div class="am-modal-bd">
-            请选择运动开始时间
-            <input type="text" class="am-modal-prompt-input">
-        </div>
-        <div class="am-modal-footer">
-            <span class="am-modal-btn" data-am-modal-cancel>取消</span>
-            <span class="am-modal-btn" data-am-modal-confirm>提交</span>
-        </div>
-    </div>
-</div>
-<div class="am-modal am-modal-prompt" tabindex="-1" id="ad-endTime">
-    <div class="am-modal-dialog">
-        <div class="am-modal-bd">
-            请选择运动结束时间
-            <input type="text" class="am-modal-prompt-input">
-        </div>
-        <div class="am-modal-footer">
-            <span class="am-modal-btn" data-am-modal-cancel>取消</span>
-            <span class="am-modal-btn" data-am-modal-confirm>提交</span>
-        </div>
-    </div>
-</div>
-
 <div class="am-modal am-modal-prompt" tabindex="-1" id="ad-partner">
     <div class="am-modal-dialog">
         <div class="am-modal-bd">
