--- a/src/main/webapp/datingRequest.html
+++ b/src/main/webapp/datingRequest.html
@@ -56,7 +56,16 @@
         <li>
             <div class="am-container dr-require-list">
                 <div class="dr-background">
+
+                    {{#compare sex}}
                     <img src="assets/i/user-background/background-boy.jpg" class="dr-background-img">
+                    {{else}}
+                    {{#judge sex}}
+                    <img src="assets/i/user-background/background-boy.jpg" class="dr-background-img">
+                    {{else}}
+                    <img src="assets/i/user-background/background-girl.jpg" class="dr-background-img">
+                    {{/judge}}
+                    {{/compare}}
                 </div>
                 <div class="dr-avatar-info">
                     <div class="dr-avatar">
@@ -65,7 +74,6 @@
                     <div class="dr-name">{{nickName}}</div>
                     <div class="dr-info"><span>{{age}}岁</span> {{city}} <span class="am-icon-mars dr-boy"></span></div>
                     <div class="am-g dr-conform-button">
-                        <!--<input value="{{customerId}}" type="hidden" id="customerId">-->
                         <div class="am-u-sm-6">
                             <button onclick="responseCustomer(0,'{{orderCId}}')" type="button" class="am-btn am-btn-success am-round am-btn-xs">残忍拒绝</button>
                         </div>
