--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -67,7 +67,7 @@
                                                                            class="am-radius main-radius"/></a>
 
                             <div class="main-gray">
-                                <div class="main-name">{{nickName}}
+                                <div class="main-name am-text-truncate">{{nickName}}
                                     <span>20岁</span>
                                     {{#if official}}
                                     {{else}}
