--- a/src/main/webapp/individualInfo.html
+++ b/src/main/webapp/individualInfo.html
@@ -125,6 +125,11 @@
                 <span class="am-badge ii-badge"><img src="assets/i/sports/badminton.png" class="ii-sports"/></span>
                 喜欢的运动
             </li>
+            <li>
+                <a class="ii-href" href="clause.html" ></a>
+                <i class="am-icon-chevron-right"></i>
+                隐私条款
+            </li>
         </ul>
     </div>
     <div class="am-modal am-modal-prompt" tabindex="-1" id="ii-tel">
