--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -68,7 +68,7 @@
 
                             <div class="main-gray">
                                 <div class="main-name am-text-truncate">{{nickName}}
-                                    <span>20岁</span>
+                                    <span>{{age}}</span>
                                     {{#if official}}
                                     {{else}}
                                     {{#compare sex}}
@@ -138,7 +138,7 @@
                 加入成功！
             </div>
             <div class="am-modal-footer">
-                <span class="am-modal-btn">确定</span>
+                <span class="am-modal-btn">好哒</span>
             </div>
         </div>
     </div>
